# review-mind-rag

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-build.yml  test.yml
.sisyphus/plans/: nas-deployment-plan.md
app/: main.py
app/components/: __init__.py  product_search.py
app/pages/: 1_Search.py  1_🔍_Search.py  2_QA_Chat.py  2_💬_QA_Chat.py  3_Summary.py  3_📊_Summary.py  4_Compare.py  4_⚖️_Compare.py
docs/: USER_GUIDE.md  getting-started.md  index.md  user-guide.md
docs/api/: analysis.md  data.md  rag.md
docs/deployment/: initial-data-load.md  nas-setup.md  reverse-proxy.md
scripts/: deploy-nas.sh  load_all_categories.py  test.sh
src/: __init__.py  config.py  exceptions.py
src/analysis/: __init__.py  metrics.py  sentiment.py  summarizer.py
src/data/: __init__.py  loader.py  preprocessor.py
src/rag/: __init__.py  chain.py  reranker.py  retriever.py  vectorstore.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_live_service.py  test_main_dashboard.py  test_qa_chat.py
tests/integration/: test_chain.py  test_vectorstore.py
tests/unit/: test_analysis.py  test_exceptions.py  test_loader.py  test_metrics.py  test_preprocessor.py  test_reranker.py  test_vectorstore_optimization.py
